typescript/checker/tests/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration3.ts.stderr
error: GetterPropWithoutReturn {
    span: Span {
        lo: BytePos(
            34,
        ),
        hi: BytePos(
            35,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration3.ts:3:7
  |
3 |   get 0() { }
  |       ^

